# EV-QA-Framework

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DATA_LEAKAGE_AUDIT.md  DISTRIBUTION_LOG.md  Dockerfile  FINAL_STATUS.md  GITHUB_SETUP.txt  IMPROVEMENTS_REPORT.md  LICENSE  Makefile  OUTREACH_STRATEGY.md  PORTFOLIO_README_FOR_RECRUITERS.md  PROJECT_STRUCTURE.md  REACH_OUT_TEMPLATES.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  STATUS.md  calibrate.py  check_docstrings.py  coverage.xml  create_repo.bat  docker-compose.prod.yml  docker-compose.yml  ev_qa_analysis.py  ev_qa_framework.py  ev_qa_models.py  git_push.ps1  git_push.sh  git_sync.ps1  (+23 more)
.agent/: STEP1_COMPLETED.md  STEP2_COMPLETED.md
.agent/rules/: sss.md
.amazonq/rules/memory-bank/: product.md
.claude/: session-reads.txt
.continue/rules/: .md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  nightly-coverage.yml  pages.yml  pylint.yml  release.yml  test.yml
api/: routes.py
articles/: devto_article.md
case_studies/: high_temperature_analysis.md  soc_drift_detection.md
config/: README.md  chemistry_lfp.json  chemistry_nca.json  chemistry_nmc.json  default_config.json  settings.yaml  tesla_config.json
dashboard/: app.py
dashboard/grafana/: dashboard.json
dashboard/grafana/provisioning/dashboards/: ev-battery.yml
dashboard/grafana/provisioning/datasources/: prometheus.yml
dashboard/static/css/: style.css
dashboard/static/js/: dashboard.js
dashboard/templates/: index.html
docs/: MODEL_PERSISTENCE.md  STRATEGIC_OUTREACH.md  index.html  index.md  make.bat
docs/archive/: FINAL_STATUS.md  GITHUB_SETUP.txt  PERPLEXITY_COMET_PROMPT.md
docs/source/: conf.py  getting_started.rst  index.rst  modules.rst
docs/source/_templates/: custom-module-template.rst
docs/source/api/: modules.rst
ev_qa_framework/: __init__.py  analysis.py  automl.py  battery_scoring.py  bms_protocol.py  can_bus.py  cell_balance.py  chemistries.py  cli.py  config.py  dbc_parser.py  digital_twin.py  fleet_analytics.py  framework.py  hil.py  metrics.py  modbus.py  models.py  physics_features.py  soh_predictor.py  soh_transformer.py  thermal_runaway.py  utils.py  v2g_scenarios.py  vector_export.py
ev_qa_framework/bms_adapters/: __init__.py  base.py  byd.py  nio.py  tesla.py
examples/: advanced_integration_demo.py  config_usage_example.py  model_persistence_example.py  sample_telemetry.csv  simple_demo.py  tesla_advanced_analysis.py  tesla_battery_qa_test.py  tesla_model_s_defective.csv  tesla_qa_report.json  test_telemetry.csv  test_tesla_battery.py
nginx/: nginx.conf
notebooks/: README.md  anomaly_detection_demo.ipynb
research/: battery_standards.md  code_quality_audit.md  ml_audit.md  repo-comparison-ev-battery-fire-prevention.md  search_arxiv.py  search_arxiv_un383.py  search_un383.py
scripts/: can_emulator.py  debug_run.py  run_dashboard.ps1
social_media/: LINKEDIN_POST.md  REDDIT_POSTS.md
tests/: __init__.py  test_advanced_analysis.py  test_automl.py  test_battery_scoring.py  test_bms_adapters.py  test_bms_protocol.py  test_bms_protocol_edge.py  test_can_bus.py  test_cell_balance.py  test_chemistries.py  test_chemistry_models.py  test_cli.py  test_config.py  test_config_edge_cases.py  test_dbc_parser.py  test_digital_twin.py  test_ev_qa.py  test_ev_qa_anomalies.py  test_ev_qa_limits.py  test_fleet_analytics.py  test_hardware_can.py  test_hil.py  test_hil_edge_cases.py  test_integration.py  test_integration_extended.py  test_ml_analysis.py  test_modbus.py  test_model_persistence.py  test_models_edge_cases.py  test_physics_features.py  test_property_based.py  test_pydantic_models.py  test_soc_soh_cross_validation.py  test_soh_predictor.py  test_soh_transformer.py  test_standards.py  test_standards_gb.py  test_tesla_battery.py  test_tesla_potesti.py  test_tesla_script.py  (+4 more)
tests_soc_soh_cross/: test_soc_soh_cross_validation.py
utils/: logger.py
