[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-qa-framework"
version = "2.1.0"
description = "ML-powered QA Framework for Electric Vehicle & IoT Battery Testing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "remontsuri", email = "remontsuri@github.com" },
]
keywords = [
    "ev", "electric-vehicle", "battery", "bms", "battery-management-system",
    "anomaly-detection", "quality-assurance", "soh-prediction",
    "battery-degradation", "can-bus", "telemetry", "iot", "automotive",
    "digital-twin", "v2g", "fleet-analytics", "automl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Automotive Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Networking :: Monitoring :: Hardware",
]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "scikit-learn>=1.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "python-can>=4.3",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "websockets>=11.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "aiofiles>=23.1",
    "matplotlib>=3.5",
    "prometheus-client>=0.17",
    "pyserial>=3.5",
]

[project.urls]
Homepage = "https://github.com/remontsuri/EV-QA-Framework"
Issues = "https://github.com/remontsuri/EV-QA-Framework/issues"
Documentation = "https://github.com/remontsuri/EV-QA-Framework#readme"
Repository = "https://github.com/remontsuri/EV-QA-Framework"
Changelog = "https://github.com/remontsuri/EV-QA-Framework/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/remontsuri/EV-QA-Framework/issues"
"Source Code" = "https://github.com/remontsuri/EV-QA-Framework"

[project.optional-dependencies]
ml = ["tensorflow>=2.15"]
hardware = ["python-can>=4.3", "pyserial>=3.5"]
dev = [
    "ruff>=0.4",
    "mypy>=1.0",
    "pylint>=2.14",
    "pyserial>=3.5",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=1.0",
]

[project.scripts]
ev-qa = "ev_qa_framework.cli:main"

[tool.setuptools.packages.find]
include = ["ev_qa_framework*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E402", "E501", "F401", "N806"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**" = ["E501", "N802", "N803"]
"ev_qa_framework/cli.py" = ["E501"]

[tool.pyright]
include = ["ev_qa_framework", "tests", "examples"]
exclude = ["**/__pycache__", "**/.venv", ".venv/**"]
strict = ["ev_qa_framework"]
reportMissingImports = true
reportMissingTypeStubs = true
reportUnknownVariableType = false
reportUnknownMemberType = false
extraRules = ["reportUnnecessaryIsInstance", "reportUnnecessaryCast", "reportUnknownArgumentType", "reportUnknownParameterType"]
pythonVersion = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "hypothesis>=6.141.1",
]
